--- a/ответы-на-вопросы.md
+++ b/ответы-на-вопросы.md
@@ -3,3 +3,6 @@
 Минимум для работы — ~10–20 страниц.
 Для уверенного использования — ~100 страниц.
 Для полного освоения (включая «под капотом») — 200+ страниц, но это редко нужно на практике.
+
+2. В чём разница между checkout и switch?
+
